# Phantom-Coin

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  SECURITY.md  deny.toml  qlm_server.der  quic_server.der
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: bench.yml  benches-nightly.yml  benches.yml  ci.yml  p2p-benches.yml  release.yml  rust-bench.yml  rust-ci.yml
configs/: node.toml
crates/pc-codec/: Cargo.toml
crates/pc-codec/src/: lib.rs
crates/pc-consensus/: Cargo.toml
crates/pc-consensus/src/: attestor_pool.rs  committee_vrf.rs  consts.rs  lib.rs
crates/pc-crypto/: Cargo.toml
crates/pc-crypto/benches/: bls_bench.rs  schnorr_bench.rs
crates/pc-crypto/src/: bls.rs  lib.rs  schnorr.rs
crates/pc-da/: Cargo.toml
crates/pc-da/src/: lib.rs
crates/pc-p2p/: Cargo.toml  README.md
crates/pc-p2p/benches/: p2p_backpressure_bench.rs  p2p_bench.rs  p2p_libp2p_e2e.rs  p2p_libp2p_extra.rs  p2p_libp2p_rpc.rs  p2p_quic_bench.rs  p2p_rate_limit_bench.rs
crates/pc-p2p/benches/baselines/2025-10-05_14-31-49/: criterion_agg.csv  criterion_agg.json  criterion_agg.md
crates/pc-p2p/benches/baselines/2025-10-05_14-31-49/criterion_raw/: p2p_batch_headers_inv_rr.csv  p2p_dedupe_ttl_payload_inv.csv  p2p_header_announce_gossip.csv  p2p_header_announce_gossip_hb_1s.csv  p2p_header_announce_gossip_relaxed.csv  p2p_libp2p_e2e_inv_to_resp_headers.csv  p2p_libp2p_e2e_inv_to_resp_headers_gossip.csv  p2p_libp2p_e2e_inv_to_resp_payloads.csv  p2p_libp2p_e2e_inv_to_resp_payloads_gossip.csv  p2p_libp2p_rpc_get_headers.csv  p2p_libp2p_rpc_get_payloads.csv  p2p_quic_rpc_warm_get_headers.csv  p2p_quic_rpc_warm_get_payloads.csv  p2p_rpc_cold_start_get_headers.csv  p2p_rpc_notfound_headers.csv  p2p_rpc_parallel_get_payloads_8.csv  p2p_rpc_payload_size_sweep.csv  p2p_rpc_warm_start_get_headers.csv
crates/pc-p2p/benches/baselines/20251006-045154/: criterion_agg.csv  criterion_agg.json  criterion_agg.md
crates/pc-p2p/src/: lib.rs  libp2p_node.rs
crates/pc-state/: Cargo.toml
crates/pc-state/src/: lib.rs
crates/pc-store/: Cargo.toml
crates/pc-store/src/: lib.rs
crates/pc-types/: Cargo.toml
crates/pc-types/proptest-regressions/: lib.txt
crates/pc-types/src/: lib.rs
crates/phantom-node/: Cargo.toml  README.md  build.rs
crates/phantom-node/src/: main.rs
crates/phantom-node/tests/: attestor_endpoints.rs  auth_endpoints.rs  bls_endpoints.rs  vrf_endpoints.rs
criterion/1/bls_fast_agg_verify/2-of-N/base/: estimates.json
criterion/1/bls_fast_agg_verify/2-of-N/new/: sample.json  tukey.json
criterion/1/bls_fast_agg_verify/2-of-N/report/: index.html
criterion/1/bls_sign/1-msg/base/: estimates.json  sample.json  tukey.json
criterion/1/bls_sign/1-msg/report/: index.html
criterion/1/schnorr_sign/1-msg/base/: estimates.json  tukey.json
criterion/1/schnorr_sign/1-msg/new/: sample.json
criterion/1/schnorr_sign/1-msg/report/: index.html
criterion/1/schnorr_verify/1-sig/base/: sample.json
criterion/1/schnorr_verify/1-sig/new/: estimates.json  tukey.json
criterion/1/schnorr_verify/1-sig/report/: index.html
criterion/10/bls_fast_agg_verify/2-of-N/base/: estimates.json
criterion/10/bls_fast_agg_verify/2-of-N/report/: index.html
criterion/10/bls_sign/1-msg/base/: tukey.json
criterion/10/schnorr_sign/1-msg/base/: estimates.json  tukey.json
criterion/10/schnorr_sign/1-msg/new/: sample.json
criterion/10/schnorr_sign/1-msg/report/: index.html
criterion/10/schnorr_verify/1-sig/new/: estimates.json  sample.json
criterion/10/schnorr_verify/1-sig/report/: index.html
criterion/11/: index.html
criterion/11/bls_sign/1-msg/base/: sample.json
criterion/11/bls_sign/1-msg/new/: estimates.json
criterion/11/schnorr_sign/1-msg/base/: estimates.json
criterion/11/schnorr_sign/1-msg/new/: sample.json
criterion/11/schnorr_verify/1-sig/base/: estimates.json
criterion/11/schnorr_verify/1-sig/new/: sample.json
criterion/12/bls_fast_agg_verify/2-of-N/base/: tukey.json
criterion/12/bls_sign/1-msg/base/: tukey.json
criterion/12/bls_sign/1-msg/report/: index.html
criterion/12/schnorr_sign/1-msg/new/: sample.json
criterion/12/schnorr_sign/1-msg/report/: index.html
criterion/12/schnorr_verify/1-sig/base/: sample.json
criterion/13/bls_fast_agg_verify/2-of-N/base/: tukey.json
criterion/13/bls_fast_agg_verify/2-of-N/new/: estimates.json
criterion/13/bls_fast_agg_verify/2-of-N/report/: index.html
criterion/13/bls_sign/1-msg/base/: tukey.json
criterion/13/bls_sign/1-msg/new/: sample.json
criterion/13/schnorr_sign/1-msg/base/: sample.json
criterion/13/schnorr_verify/1-sig/base/: tukey.json
criterion/2/bls_fast_agg_verify/2-of-N/new/: estimates.json  sample.json  tukey.json
criterion/2/bls_fast_agg_verify/2-of-N/report/: index.html
criterion/2/bls_sign/1-msg/base/: estimates.json
criterion/2/bls_sign/1-msg/new/: sample.json  tukey.json
criterion/2/bls_sign/1-msg/report/: index.html
criterion/2/schnorr_sign/1-msg/base/: estimates.json  tukey.json
criterion/2/schnorr_sign/1-msg/new/: sample.json
criterion/2/schnorr_sign/1-msg/report/: index.html
criterion/2/schnorr_verify/1-sig/base/: estimates.json  tukey.json
criterion/2/schnorr_verify/1-sig/new/: sample.json
criterion/2/schnorr_verify/1-sig/report/: index.html
criterion/3/bls_fast_agg_verify/2-of-N/base/: estimates.json
criterion/3/bls_fast_agg_verify/2-of-N/report/: index.html
criterion/3/bls_sign/1-msg/base/: estimates.json
criterion/3/bls_sign/1-msg/new/: sample.json
criterion/4/bls_sign/1-msg/new/: sample.json
criterion/9/report/: index.html
docs/: CRYPTO_CHOICE.md  GENESIS.md  PHANTOMCOIN_TODO_PLAN.md  RUST_ERROR_POLICY.md  SPEC_CODEC.md  SPEC_FEES.md  SPEC_MATURITY.md  SPEC_POW.md  SPEC_SLASHING.md
docs/grafana/: phantom-node-cache-dashboard.json  phantom-node-mempool-dashboard.json
docs/grafana/provisioning/dashboards/: dashboards.yaml  dashboards.yml
docs/observability/: docker-compose.yml
docs/prometheus/: phantom-node-alerts.yaml  prometheus.yml
scripts/: start_localnet.sh
(+85 files in other folders)
