[workspace]
members = [
    "crates/pc-codec",
    "crates/pc-crypto",
    "crates/pc-types",
    "crates/pc-consensus",
    "crates/pc-state",
    "crates/phantom-node",
    "crates/pc-p2p",
    "crates/pc-da",
    "crates/pc-store",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.1"
license = "AGPL-3.0-only"

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.dev]
panic = "abort"
opt-level = 1
codegen-units = 4
