[package]
name = "phantom-node"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
hyper = { version = "0.14", features = ["server","http1","tcp"] }
pc-codec = { path = "../pc-codec" }
pc-consensus = { path = "../pc-consensus" }
pc-crypto = { path = "../pc-crypto" }
pc-da = { path = "../pc-da", features = ["async"] }
pc-p2p = { path = "../pc-p2p", features = ["async", "quic"] }
pc-store = { path = "../pc-store" }
pc-types = { path = "../pc-types" }
pc-state = { path = "../pc-state" }
tokio = { version = "1.39", features = ["rt-multi-thread","macros","time","signal","net","sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
once_cell = "1.19"
async-trait = "0.1"
lru = "0.12"
num_cpus = "1.16"

[features]
default = []
rocksdb = ["pc-state/rocksdb"]
